--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -16,6 +16,8 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
+    - name: Go to correct location
+      run: cd src-tauri
     - name: Build
       run: cargo build --verbose
     - name: Run tests
