--- a/package.json
+++ b/package.json
@@ -12,13 +12,14 @@
   },
   "license": "MIT",
   "dependencies": {
-    "solid-js": "^1.7.8",
-    "@tauri-apps/api": "^1"
+    "@tauri-apps/api": "^2.0.0",
+    "@tauri-apps/plugin-shell": "^2.2.0",
+    "solid-js": "^1.7.8"
   },
   "devDependencies": {
+    "@tauri-apps/cli": "^2.2.4",
     "typescript": "^5.0.2",
     "vite": "^5.0.0",
-    "vite-plugin-solid": "^2.8.0",
-    "@tauri-apps/cli": "^1"
+    "vite-plugin-solid": "^2.8.0"
   }
 }
